tests/compile_fail/006_buffer_append_invalid_source.vox
a buffer called "dst" is 16 bytes in size.
a number called "n" is 42.
append n to dst.
